--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_area :description %>
   </div>
 
+  <div class="field">
+    <%= form.label :link %>
+    <%= form.text_area :link %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
