--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1> &nbsp&nbsp  Welcome To My Portfolio</h1>
-
-
-<h1> &nbsp&nbsp Projects:</h1>
-
+  <section class="bg-success pt-5 pb-5">
+    <h1> &nbsp&nbsp  Welcome To My Portfolio</h1>
+  </section>
+  
 <table>
+  
   <thead>
     <tr>
       <th colspan="3"></th>
@@ -13,20 +13,26 @@
   </thead>
 
 
-  <p> &nbsp&nbsp&nbsp Personal Info:  <br>
-      &nbsp&nbsp&nbsp - Fourth year cyber security student at University of Colorado, Colorado Springs <br>
-      &nbsp&nbsp&nbsp - Familiar with: C++, Java, Ruby on Rails, UNIX, and Assembly Language </p>  
+  <section class="bg-danger pt-5 pb-5">
+    <p> &nbsp&nbsp&nbsp Personal Info:  <br>
+        &nbsp&nbsp&nbsp - Fourth year cyber security student at University of Colorado, Colorado Springs <br>
+        &nbsp&nbsp&nbsp - Familiar with: C++, Java, Ruby on Rails, UNIX, and Assembly Language </p>  
+  </section>
 
+  <section class="bg-info pt-5 pb-5">
+    <h1> &nbsp&nbsp Projects:</h1>
+  </section>
 
   <tbody>
-  <p>  <br> &nbsp&nbsp&nbsp Project Title: ____________________ Project Description: ________________ Options:</p>
+  <p>  <br> &nbsp&nbsp&nbsp Project Title: ___________ Project Description: __________ Link to Project:____________
   <% @projects.each do |project| %>
       <tr>
         <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= project.title %></td>   
         <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= project.description %></td>
-        <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'Show    ,', project if user_signed_in? %></td>  
-        <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'Edit    ,', edit_project_path(project) if user_signed_in? %></td>
-        <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } if user_signed_in? %></td>
+        <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= project.link %></td>
+        <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'View Project', project if user_signed_in? %></td>  
+        <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'Edit Project', edit_project_path(project) if user_signed_in? %></td>
+        <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'Destroy Project', project, method: :delete, data: { confirm: 'Are you sure?' } if user_signed_in? %></td>
       </tr>
     <% end %>
   </tbody>
