--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,20 +1,27 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @project.title %>
-</p>
+<section class="bg-warning pt-5 pb-5">
+<div class="container">
+  <div class="show">
+    <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @project.description %>
-</p>
+    <p>
+      <strong> Project - Title:</strong>
+      <%= @project.title %>
+    </p>
 
-<p>
-  <strong>Link:</strong>
-  <%= @project.description %>
-</p>
+    <p>
+      <strong> Project - Description:</strong>
+    <%= @project.description %>
+    </p>
+
+    <p>
+      <strong> Project - Link:</strong>
+      <%= @project.link %>
+    </p>
 
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+    <%= link_to 'Edit', edit_project_path(@project) %> |
+    <%= link_to 'Back', projects_path %>
+  </div>
+</div>
+</section>
