--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Project</h1>
 
-<%= render 'form', project: @project %>
+<div class="container-fluid">
+    <section class="bg-warning pt-5 pb-5">
+        <h1>Editing Project</h1>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+        <%= render 'form', project: @project %>
+
+        <%= link_to 'Show', @project , class: "btn btn-success" %> |
+        <%= link_to 'Back', projects_path , class: "btn btn-success" %>
+    </section>
+</div>
