--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,44 +1,49 @@
 <p id="notice"><%= notice %></p>
 
-  <section class="bg-success pt-5 pb-5">
-    <h1> &nbsp&nbsp  Welcome To My Portfolio</h1>
-  </section>
+  <div class="container-fluid">
+    <section class="bg-success pt-5 pb-5">
+      <h1> &nbsp&nbsp  Welcome To My Portfolio</h1>
+    </section>
+  </div>  
   
 <table>
   
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="container-fluid">
+    <thead>
+      <tr>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
 
 
-  <section class="bg-danger pt-5 pb-5">
-    <p> &nbsp&nbsp&nbsp Personal Info:  <br>
-        &nbsp&nbsp&nbsp - Fourth year cyber security student at University of Colorado, Colorado Springs <br>
-        &nbsp&nbsp&nbsp - Familiar with: C++, Java, Ruby on Rails, UNIX, and Assembly Language </p>  
-  </section>
+    <section class="bg-danger pt-5 pb-5">
+      <p> &nbsp&nbsp&nbsp Personal Info:  <br>
+         &nbsp&nbsp&nbsp - Fourth year cyber security student at University of Colorado, Colorado Springs <br>
+          &nbsp&nbsp&nbsp - Familiar with: C++, Java, Ruby on Rails, UNIX, and Assembly Language <br>
+          &nbsp&nbsp&nbsp - I built this portfolio website with Ruby on Rails, Github, CircleCi, and Heroku. </p>   
+    </section>
 
-  <section class="bg-info pt-5 pb-5">
-    <h1> &nbsp&nbsp Projects:</h1>
-  </section>
+    <section class="bg-info pt-5 pb-5">
+      <h2> &nbsp&nbsp Projects:</h2>
+    </section>
 
   
-    <tbody>
-    <section class="bg-warning pt-5 pb-5">
-      <p>  <br> &nbsp&nbsp&nbsp Project Title: ___________ Project Description: __________ Project Options:____________
-      <% @projects.each do |project| %>
-        <tr>
-          <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= project.title %></td>    
-          <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= project.description %></td>
-          <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'View Project', project if user_signed_in? %></td>  
-          <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'Edit Project', edit_project_path(project) if user_signed_in? %></td>
-          <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'Destroy Project', project, method: :delete, data: { confirm: 'Are you sure?' } if user_signed_in? %></td>
-        </tr>
-      <% end %>
-    </section>  
-    </tbody>
-  
+      <tbody>
+      <section class="bg-warning pt-5 pb-5">
+        <h4>  <br> &nbsp&nbsp&nbsp Project Title: ___________ Project Description: __________ Project Options:____________
+        <% @projects.each do |project| %>
+          <tr>
+            <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= project.title %></td>    
+            <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= project.description %></td>
+            <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'View Project', project , class: "btn btn-primary" if user_signed_in? %></td>  
+            <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'Edit Project', edit_project_path(project) ,  class: "btn btn-info"  if user_signed_in? %></td>
+            <td> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <%= link_to 'Destroy Project', project, method: :delete, data: { confirm: 'Are you sure?' } , class: "btn btn-warning" if user_signed_in? %></td>
+          </tr>
+        <% end %>
+      </section>  
+      </tbody>
+
+  </div>
 
 
 </table>
